--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- NAVBAR -->
+    <nav class="navbar">
+      <h1 class="logo">Adventure</h1>
+      <ul class="nav-links">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Tours</a></li>
+        <li><a href="#">Explore</a></li>
+        <li><a href="#">About Us</a></li>
+        <li class="ctn"><a href="#">Contact</a></li>
+      </ul>
+      <img src="./img/menu-btn.png" alt="" class="menu-btn">
+    </nav>
     <header>
       <div class="header-content">
         <h2>Explore The Colorful World</h2>
@@ -16,5 +28,12 @@
         <a href="#" class="ctn">Learn More</a>
       </div>
     </header>
+    <script>
+      const menuBtn = document.querySelector(".menu-btn");
+      const navlinks = document.querySelector(".nav-links");
+      menuBtn.addEventListener("click", ()=>{
+        navlinks.classList.toggle("mobile-menu")
+      })
+    </script>
   </body>
 </html>
