--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#">About Us</a></li>
         <li class="ctn"><a href="#">Contact</a></li>
       </ul>
-      <img src="./img/menu-btn.png" alt="" class="menu-btn">
+      <img src="./img/menu-btn.png" alt="" class="menu-btn" />
     </nav>
     <header>
       <div class="header-content">
@@ -28,12 +28,90 @@
         <a href="#" class="ctn">Learn More</a>
       </div>
     </header>
+    <!-- section 2 -->
+
+    <section class="events">
+      <div class="title">
+        <h1>Upcomig Event</h1>
+        <div class="line"></div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <img src="./img/img1.png" alt="" />
+          <h4>Everage Camp Track</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit, numquam.
+          </p>
+          <a href="#" class="ctn">Learn More</a>
+        </div>
+        <div class="col">
+          <img src="./img/img2.png" alt="" />
+          <h4>Mail Advertising</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Reprehenderit, numquam.
+          </p>
+          <a href="#" class="ctn">Learn More</a>
+        </div>
+      </div>
+    </section>
+    <!-- section 2 end -->
+
+    <!-- Explore Section start -->
+    <section class="explore">
+      <div class="explore-content">
+        <h1>EXPLORE THE WORLD</h1>
+        <div class="line"></div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nihil
+          tenetur voluptatum.
+        </p>
+        <a href="#" class="ctn">Learn More</a>
+      </div>
+    </section>
+    <!-- Explore Section end -->
+
+    <!-- Section Tours start -->
+    <section class="tours">
+      <div class="row">
+        <div class="col content-col">
+          <h1>upcoming tours and events</h1>
+          <div class="line"></div>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Necessitatibus, debitis?
+          </p>
+          <a href="#" class="ctn">Learn More</a>
+        </div>
+        <div class="col image-col">
+          <div class="image-gallery">
+            <img src="./img/img1.png" alt="" />
+            <img src="./img/img2.png" alt="" />
+            <img src="./img/img3.png" alt="" />
+            <img src="./img/img4.png" alt="" />
+            <img src="./img/img5.png" alt="" />
+            <img src="./img/img6.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Section Tours end -->
+
+    <!-- Section footer start -->
+    <section class="footer">
+      <p>Adress: İstanbul, Tel:+90555555555 </p>
+      <p>Copyright</p>
+    </section>
+    <!-- Section footer ens -->
+    <!-- script section -->
     <script>
       const menuBtn = document.querySelector(".menu-btn");
       const navlinks = document.querySelector(".nav-links");
-      menuBtn.addEventListener("click", ()=>{
-        navlinks.classList.toggle("mobile-menu")
-      })
+      menuBtn.addEventListener("click", () => {
+        navlinks.classList.toggle("mobile-menu");
+      });
     </script>
   </body>
 </html>
